# KVM

./: .clang-format  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  README.md
.agents/skills/pr-workflow/: SKILL.md
.agents/skills/project-doc-bootstrap/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
docs/: index.md
docs/conventions/: coding-style.md
docs/thinking/: design_ir_system.md  ir_core_discussion.md  ir_open_issues.md  problems_at_beginning.md
examples/: kernel_ir.rs
ir/: test.kvm
src/: lib.rs  main.rs
src/cli/: CMakeLists.txt  dialects.cpp  dialects.h  main.cpp
src/compiler/: context.rs  mod.rs  store.rs
src/compiler/dialect/: dialect.rs  key.rs  mod.rs  op_view.rs  operator.rs  tests.rs
src/compiler/dialect/hir/: add.rs  mod.rs
src/compiler/dialects/: DESIGN.md  description.rs  mod.rs
src/compiler/dialects/executor/: mod.rs
src/compiler/dialects/hlo/: DESIGN.md  arith.rs  attention.rs  builder.rs  communication.rs  description.rs  gemm.rs  kvcache.rs  matmul.rs  mod.rs  shape.rs  tensor.rs  tests.rs  token.rs
src/compiler/dialects/kernel/: DESIGN.md  builder.rs  dtype.rs  matmul.rs  mod.rs  tensor.rs
src/compiler/dialects/llo/: mod.rs
src/compiler/ir/: API.md  DESIGN.md  attr.rs  attribute.rs  entity.rs  error.rs  index.rs  mod.rs  operation.rs  operator.rs  tests.rs  text.rs  ty.rs  type.rs  value.rs
src/compiler/ir/base/: attribute.rs  mod.rs  operator.rs  type.rs  variable.rs
src/compiler/ir/graph/: format.rs  mod.rs  render.rs  transform.rs  traversal.rs  verify.rs
src/device/: device.cpp  device.h
src/dialect/kernel/: CMakeLists.txt  attn.cpp  attn.h  dialect.cpp  dialect.h  dist.cpp  dist.h  dtype.h  tensor.h  text_util.h
src/ir/: CMakeLists.txt  any_of.h  attr.h  builtin.h  graph.cpp  graph.h  graph_config.h  kv_meta.h  node.h  value.h  verify_result.h
src/ir/dialect/: dtype.h  text_util.h
src/ir/dialect/kernel/: dialect.cpp  ops.cpp  ops.h  values.cpp  values.h
src/ir/dialect/task/: dialect.cpp  dialect.h  ops.cpp  ops.h  values.h
src/ir/dialect/tile/: dialect.cpp  dialect.h  ops.cpp  ops.h  values.h  verify.cpp  verify.h
src/ir/serialization/: builtin_codecs.h  parser.cpp  parser.h  registry.h  serializer.cpp  serializer.h
src/ir/visualization/: html_template.h  visualizer.cpp  visualizer.h
src/render/: DESIGN.md  mod.rs
src/transform/kernel_to_task/: kernel_to_task.cpp  kernel_to_task.h
tests/: CMakeLists.txt  test_attr.cpp  test_decomp.cpp  test_graph.cpp  test_harness.h  test_kernel_dialect.cpp  test_parse.cpp  test_serialize.cpp  test_task_dialect.cpp  test_tile_dialect.cpp  test_value.cpp  test_visualize.cpp
